# tesi-seismic-analysis

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  docs_index.html  environment.yml  pyproject.toml  requirements.txt
data/: data_README.md
data/processed/: phasenet_picks_instance_corrected.csv
data/processed/01a_metadata/acceleration/: metadata_variable_acc.parquet
data/processed/01a_metadata/displacement/: metadata_clean_dis.parquet  metadata_variable_dis.parquet
data/processed/03_phase_identification_phasenet/acceleration/: phasenet_picks_acceleration.csv
data/processed/03_phase_identification_phasenet/displacement/: phasenet_picks_displacement.csv
data/processed/03_phase_identification_phasenet/velocity/: phasenet_picks_velocity.csv
data/processed/03a_pdf_analysis/: gaussian_fit_results.parquet  heavy_tail_results.parquet
data/processed/03a_phase_identification_ar_pick/acceleration/: df_full_acceleration_ar_pick.parquet
data/processed/03a_phase_identification_ar_pick/displacement/: df_full_displacement_ar_pick.parquet
data/processed/03a_phase_identification_ar_pick/velocity/: df_full_velocity_ar_pick.parquet
data/processed/03b_phase_identification_phasenet/acceleration/: df_full_acceleration_phasenet.parquet
data/processed/03b_phase_identification_phasenet/displacement/: df_full_displacement_phasenet.parquet
data/processed/03b_phase_identification_phasenet/velocity/: phasenet_picks_velocity.csv
data/processed/04b_moment_scaling/: summary_windowed_ensemble.parquet  temporal_windows.parquet
data/processed/INT-41004391/latex_tables/: ar_aic_scaling_acc_nothresh_queyras.tex  ar_aic_scaling_disp_nothresh_queyras.tex  ar_aic_scaling_vel_nothresh_queyras.tex  phasenet_scaling_acc_nothresh_queyras.tex  phasenet_scaling_acc_thresh30_queyras.tex  phasenet_scaling_disp_nothresh_queyras.tex  (+3 more)
data/processed/latex_tables/: constant_fields.tex  constant_fields_acc.tex  constant_fields_dis.tex  header_table.tex  header_table_acc.tex  header_table_dis.tex  header_table_vel.tex  heavy_tail_table.tex  theoretical_arrivals.tex
data/raw/: instance_metadata_sample.csv
docs/: docs_references.md
figures/: figures_README.md
notebooks/: 01_data_loading_preprocessing.ipynb  01_metadata_preprocessing_exploration.ipynb  02_pdf_analysis.ipynb  02_seismic_signals_preprocessing_exploration.ipynb  03_event_segmentation.ipynb  03_single_signal_analysis.ipynb  03a_pdf_analysis.ipynb  03a_phase_identification_ar_pick.ipynb  03b_moment_scaling.ipynb  03b_moment_scaling_autocorrelation.ipynb  03b_phase_picking_phasenet.ipynb  03c.ipynb  03c_autocorrelation.ipynb  04_aggregated_analysis.ipynb  04a_moment_scaling_spatial.ipynb  04a_pdf_aggregated_analysis.ipynb  04b_moment_scaling_aggregated.ipynb  04b_moment_scaling_temporal.ipynb  04c_autocorrelation_aggregated.ipynb  05_sensitivity_analysis.ipynb  05_sensitivity_analysis_refactored.ipynb  05a_pdf_distance_groups.ipynb  analysis.ipynb  event_segmentation.ipynb  notebooks_README.md  phase-picking-using-phasenet.ipynb  phase_picking_phasenet.ipynb  plots.ipynb  raw_data.ipynb
notebooks/preprocessing/: 01_metadata_preprocessing_exploration.ipynb  01a_metadata_preprocessing_exploration.ipynb  01b_seismic_signals_preprocessing_exploration.ipynb  02_seismic_signals_preprocessing_exploration.ipynb
src/: __init__.py  cleaning.py  cleaning_signals.py  io.py  phasenet_utils.py  plot_settings.py  plots.py  plots_metadata.py  plots_signals.py  signals.py  signals_autocorrelation.py  signals_pdf.py  signals_scaling.py  signals_scaling_ensamble.py  signals_scaling_ensemble.py  src_README.md  window_detection.py
src/analysis/: analysis_init.py  event_segmentation.py  sensitivity.py  signals_pdf.py  signals_scaling.py  signals_scaling_ensemble.py  signals_scaling_spatial.py  signals_scaling_temporal.py  window_detection.py
src/io/: io.py  io_init.py  loaders.py
src/preprocessing/: cleaning_metadata.py  cleaning_signals.py  preprocessing_init.py  signal_conversion.py  signals_integration.py
src/processing/: processing_init.py  signal_conversion.py  signals_integration.py
src/segmentation/: onset_detection.py  phasenet_utils.py  search_windows.py  segmentation_init.py  theoretical_arrivals.py  window_segmentation.py  window_validation.py
src/utils/: latex_export.py  utils_init.py
src/visualization/: plot_settings.py  plots_metadata.py  plots_moment_scaling.py  plots_segmentation.py  plots_sensitivity.py  plots_signals.py  visualization_init.py
(+1022 files in other folders)
